--- a/src/js/styles/BPStyle.css
+++ b/src/js/styles/BPStyle.css
@@ -17,6 +17,10 @@ html, body {
 	font-family: arial;
 }
 
+body > * {
+	height: 100%;
+}
+
 .clearfix {
 	overflow: auto;
 	zoom: 1;
@@ -24,6 +28,7 @@ html, body {
 
 .view {
 	width: 100%;
+	min-width: 320px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -66,7 +71,7 @@ html, body {
 	border: none;
 	margin: 0px;
 	font-size: 39px;
-	width: 80px;
+	width: 85px;
 }
 
 .submitButton {
@@ -80,13 +85,14 @@ html, body {
 	outline: none;
 }
 
-.submitButton:active {
-	background-color: var(--greyLightest);
-	color: var(--purpleLight);
+.submitButton:hover,.submitButtonform:active {
+	background-color: var(--purpleMedium);
 }
 
-
-
+/*.submitButton:active {
+	background-color: var(--greyLightest);
+	color: var(--purpleLight);
+}*/
 
 /* Graph CSS */
 .graphContainer {
@@ -113,3 +119,28 @@ html, body {
 	background-repeat: no-repeat;
 	background-image: url('https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-arrow-down-b-128.png')
 }
+
+
+@media only screen and (min-width: 768px) {
+    .view {
+    	height: 100%;
+    	margin: auto;
+    	width: 80%;
+    	flex-direction: row;
+    	justify-content: center;
+		align-items: center;
+    }
+    .containerForm {
+    	height: 320px;
+    	min-width: 320px;
+    	padding: 0 30px 0 30px;
+    	justify-content: space-around;
+    	border-bottom: none;
+    	border-right: 3px solid var(--greyLight);
+    }
+    .graphContainer {
+    	margin-top: 0;
+    	padding: 0 30px 0 30px;
+    }
+}
+
