--- a/src/js/styles/BPStyle.css
+++ b/src/js/styles/BPStyle.css
@@ -60,7 +60,7 @@ body > * {
 	color: var(--greyLight);
 	padding: 10px;
 	width: 200px;
-	margin: 20px 0 20px 0;
+	margin: 20px 0 3px 0;
 	border: 3px solid var(--greyLightest);
 /*	border-radius: 15px;
 */	text-align: center;
@@ -88,6 +88,8 @@ body > * {
 .submitButton:hover,.submitButtonform:active {
 	background-color: var(--purpleMedium);
 }
+
+.
 
 /*.submitButton:active {
 	background-color: var(--greyLightest);
@@ -118,6 +120,13 @@ body > * {
 	outline: none;
 	background-repeat: no-repeat;
 	background-image: url('https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-arrow-down-b-128.png')
+}
+
+.errorMessage {
+	height: 12px;
+	font-size: 12px;
+	color: red;
+	margin-bottom: 10px;
 }
 
 
